--- a/app/globals.css
+++ b/app/globals.css
@@ -181,3 +181,35 @@
     @apply bg-background text-foreground;
   }
 }
+/* biome-ignore lint/correctness/noUnknownTypeSelector: <explanation> */
+::view-transition-old(root),
+/* biome-ignore lint/correctness/noUnknownTypeSelector: <explanation> */
+  ::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
+}
+@keyframes shine {
+  0% {
+    background-position: 100%;
+  }
+  100% {
+    background-position: -100%;
+  }
+}
+@theme inline {
+  --animate-meteor-effect: meteor 5s linear infinite;
+
+  @keyframes meteor {
+    0% {
+      transform: rotate(215deg) translateX(0);
+      opacity: 1;
+    }
+    70% {
+      opacity: 1;
+    }
+    100% {
+      transform: rotate(215deg) translateX(-500px);
+      opacity: 0;
+    }
+  }
+}
